--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<br>I'm a Ai Ml Engineer.
 			</p>
 			<!-- cv download link -->
-			<a href="#">DOWNLOAD MY CV</a>
+			<a href="https://download-shahil-cv.onrender.com/DownloadCV/pdf">DOWNLOAD MY CV</a>
 		</div> 
 
 		<div class="image-container">
